--- a/pmp-study/src/FlashCards.css
+++ b/pmp-study/src/FlashCards.css
@@ -8,10 +8,40 @@
     font-weight: bold;
 }
 
+.card-text {
+    /* transition: all 1s; */
+    min-height: 150px;
+}
+
 .show {
     opacity: 1
 }
 
 .hide {
     opacity: 0
+}
+
+.definition-visibility-state-btn {
+    display: block;
+    margin:auto
+}
+
+.FlashCard {
+    position:relative;
+    max-width: 600px;
+    margin: auto;
+}
+
+.reveal-btn {
+    /* transition: all 1s; */
+    position:absolute;
+    opacity: 1;
+    z-index: 10;
+    width: 150px;
+    left: calc(50% - 75px);
+    top: 40%;
+}
+
+.reveal-btn.hide{
+    opacity: 0;
 }
